--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,5 @@
 body{
+    font-family: sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -7,15 +8,20 @@ body{
     width: 100%;
 }
 #indicator-box{
+    font-size: 13px;
     z-index: 99;
     position: absolute;
-    height: 35px;
+    height: 120px;
     width: 180px;
     background-color: rgba(255,255,255,0.8);
-    bottom: 30px;
+    bottom: 40px;
     right: 0px;
     padding: 8px;
     -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
     -moz-box-sizing: border-box;    /* Firefox, other Gecko */
     box-sizing: border-box;         /* Opera/IE 8+ */
+}
+
+#indicator-box > p {
+    margin: 3px 3px 6px 3px;
 }
